# codex_QA_Automation

./: .gitignore  README.md  vibium-python-automation-guide.md
field_mapping_ai_projects/: README.md
recatch_bulk_import/: .env.example  .env.prod.example  .env.test.example  .gitignore  README.md  pyproject.toml
recatch_bulk_import/credentials/: recatch_login.example.txt
recatch_bulk_import/data/: lead_seed_demo_350001_350005.csv  lead_seed_demo_350006_350055.csv  lead_seed_instance_email_10000.csv
recatch_bulk_import/data/csv_split/: lead_seed_dyn_0000001_0500000_part_003.csv  lead_seed_dyn_0000001_0500000_part_006.csv  lead_seed_dyn_0000001_0500000_part_009.csv  lead_seed_dyn_0000001_0500000_part_011.csv  lead_seed_dyn_0000001_0500000_part_013.csv  lead_seed_dyn_0000001_0500000_part_015.csv  lead_seed_dyn_0000001_0500000_part_016.csv  lead_seed_dyn_0000001_0500000_part_017.csv  lead_seed_dyn_0000001_0500000_part_019.csv  lead_seed_dyn_0000001_0500000_part_023.csv  lead_seed_dyn_0000001_0500000_part_025.csv  lead_seed_dyn_0000001_0500000_part_027.csv  lead_seed_dyn_0000001_0500000_part_028.csv  lead_seed_dyn_0000001_0500000_part_029.csv  lead_seed_dyn_0000001_0500000_part_032.csv  lead_seed_dyn_0000001_0500000_part_034.csv  lead_seed_dyn_0000001_0500000_part_036.csv  lead_seed_dyn_0000001_0500000_part_039.csv  lead_seed_dyn_0000001_0500000_part_040.csv  lead_seed_dyn_0000001_0500000_part_041.csv  lead_seed_dyn_0000001_0500000_part_045.csv  lead_seed_dyn_0000001_0500000_part_047.csv  lead_seed_dyn_0000001_0500000_part_049.csv  lead_seed_dyn_0000001_0500000_part_052.csv  lead_seed_dyn_0000001_0500000_part_053.csv  lead_seed_dyn_0000001_0500000_part_055.csv  lead_seed_dyn_0000001_0500000_part_057.csv  lead_seed_dyn_0000001_0500000_part_059.csv  lead_seed_dyn_0000001_0500000_part_060.csv  lead_seed_dyn_0000001_0500000_part_061.csv  lead_seed_dyn_0000001_0500000_part_062.csv  lead_seed_dyn_0000001_0500000_part_063.csv  lead_seed_dyn_0000001_0500000_part_064.csv  lead_seed_dyn_0000001_0500000_part_066.csv  lead_seed_dyn_0000001_0500000_part_067.csv  lead_seed_dyn_0000001_0500000_part_068.csv  lead_seed_dyn_0000001_0500000_part_069.csv  lead_seed_dyn_0000001_0500000_part_070.csv  lead_seed_dyn_0000001_0500000_part_071.csv  lead_seed_dyn_0000001_0500000_part_072.csv  (+311 more)
recatch_bulk_import/docs/: RUNBOOK.md
recatch_bulk_import/mappings/: inst_email_10000.json
recatch_bulk_import/scripts/: import_failure_reporter.py  import_feedback_loop.py
recatch_bulk_import/src/recatch_bulk_import/: cli.py  probe.py
recatch_bulk_import/tests/: test_cli_preflight.py
recatch_bulk_import_withUI/: .env.example  .gitignore  README.md  package-lock.json  package.json  pyproject.toml  run_agentation_mcp.command  run_ui.command  streamlit_journey_test.py
recatch_bulk_import_withUI/data/: DB_Migration_Company_Part_import_ready.csv  lead_seed.csv  lead_seed_full.csv
recatch_bulk_import_withUI/data/csv_split/: lead_seed_dyn_0000001_0500000_part_001.csv  lead_seed_dyn_0000001_0500000_part_002.csv  lead_seed_dyn_0000001_0500000_part_004.csv  lead_seed_dyn_0000001_0500000_part_005.csv  lead_seed_dyn_0000001_0500000_part_007.csv  (+345 more)
recatch_bulk_import_withUI/frontend/: agentation-entry.jsx
recatch_bulk_import_withUI/scripts/: bulk_delete_leads.py
recatch_company_merge/: README.md  pyproject.toml
recatch_deal_bulk_import/: .gitignore  README.md  pyproject.toml
recatch_deal_bulk_import/credentials/: recatch_login.example.txt
recatch_deal_bulk_import/samples/: deal_import_smoke.csv
recatch_deal_bulk_import/specs/: deal_field_matrix_example.json
recatch_import_operator_mcp/: README.md  pyproject.toml
recatch_import_operator_skills/: .env.example  .gitignore  README.md  pyproject.toml
recatch_import_operator_skills/credentials/: recatch_login.example.txt
recatch_import_operator_skills/data/: test_DB_Migration_Part1 .csv
recatch_import_operator_skills/scripts/: install_codex_skill.py
recatch_recipient_groups/: .gitignore  E2E_RUNBOOK.md  README.md  pyproject.toml
recatch_recipient_groups/credentials/: recatch_login.example.txt
recatch_recipient_groups/tests/: test_plans.py  test_prefixes.py
(+31254 files in other folders)
