[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "recatch-bulk-import"
version = "0.1.0"
description = "Shared QA bulk import automation for Re:catch leads"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "vibium==0.1.8",
]

[project.scripts]
recatch-bulk-import = "recatch_bulk_import.cli:main"
recatch-bulk-import-probe = "recatch_bulk_import.probe:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
