[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "recatch-company-merge"
version = "0.1.0"
description = "Company duplicate merge automation for Re:catch"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "vibium==0.1.8",
]

[project.scripts]
recatch-company-merge = "recatch_company_merge.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
