[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "recatch-import-operator-skills"
version = "0.1.0"
description = "Bootstrap workspace for Re:catch import operator skills"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "vibium==0.1.8",
]

[project.scripts]
recatch-import-operator-skills = "recatch_import_operator_skills.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
