[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "recatch-recipient-groups"
version = "0.1.0"
description = "Reusable QA automation for Re:catch recipient groups"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "vibium==0.1.8",
]

[project.scripts]
recatch-recipient-groups = "recatch_recipient_groups.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
